# SimpleFFPlayer

./: CMakeLists.txt  MediaFormat.cpp  MediaFormat.hpp  MediaFrame.cpp  MediaFrame.h  MediaFrameAvailableListener.cpp  MediaFrameAvailableListener.h  MediaInput.cpp  MediaInput.hpp  MediaRender.cpp  MediaRender.hpp  MediaUtils.cpp  MediaUtils.h  README.md  main.cpp
audioplayer/: Common.h  FFAudioOutput.cpp  FFAudioOutput.h  FFCodec.cpp  FFCodec.h  FFInputStream.cpp  FFInputStream.h  FFStream.cpp  FFStream.h  FFUtils.cpp  FFUtils.h  main.cpp
